--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <div class="wrapper">
 
     <!-- HEADER -->
+    <h1>`Welcome to Riyadh`</h1>
     <!-- SUB HEAD -->
+    <h1>`Where A Traditional Past Meets A Modern Future.`</h1>
+    
 
     <div id="content">
 
